--- a/index.html
+++ b/index.html
@@ -104,24 +104,107 @@
       background-color: rgba(240,240,240,0.9) !important; 
     }
 
+    /** Navbar tabs */
+
+    .tabbable-panel {
+      border:1px solid #eee;
+      padding: 10px;
+    }
+
+    /* Default mode */
+    .tabbable-line > .nav-tabs {
+      border: none;
+      margin: 0px;
+    }
+    .tabbable-line > .nav-tabs > li {
+      margin-right: 2px;
+    }
+    .tabbable-line > .nav-tabs > li > a {
+      border: 0;
+      margin-right: 0;
+      color: #737373;
+    }
+    .tabbable-line > .nav-tabs > li > a > i {
+      color: #a6a6a6;
+    }
+    .tabbable-line > .nav-tabs > li.open, .tabbable-line > .nav-tabs > li:hover {
+      border-bottom: 4px solid #fbcdcf;
+    }
+    .tabbable-line > .nav-tabs > li.open > a, .tabbable-line > .nav-tabs > li:hover > a {
+      border: 0;
+      background: none !important;
+      color: #333333;
+    }
+    .tabbable-line > .nav-tabs > li.open > a > i, .tabbable-line > .nav-tabs > li:hover > a > i {
+      color: #a6a6a6;
+    }
+    .tabbable-line > .nav-tabs > li.open .dropdown-menu, .tabbable-line > .nav-tabs > li:hover .dropdown-menu {
+      margin-top: 0px;
+    }
+    .tabbable-line > .nav-tabs > li.active {
+      border-bottom: 4px solid #f3565d;
+      position: relative;
+    }
+    .tabbable-line > .nav-tabs > li.active > a {
+      border: 0;
+      color: #333333;
+    }
+    .tabbable-line > .nav-tabs > li.active > a > i {
+      color: #404040;
+    }
+    .tabbable-line > .tab-content {
+      margin-top: -3px;
+      background-color: #fff;
+      border: 0;
+      border-top: 1px solid #eee;
+      padding: 15px 0;
+    }
+    .portlet .tabbable-line > .tab-content {
+      padding-bottom: 0;
+    }
+
+    /* Below tabs mode */
+
+    .tabbable-line.tabs-below > .nav-tabs > li {
+      border-top: 4px solid transparent;
+    }
+    .tabbable-line.tabs-below > .nav-tabs > li > a {
+      margin-top: 0;
+    }
+    .tabbable-line.tabs-below > .nav-tabs > li:hover {
+      border-bottom: 0;
+      border-top: 4px solid #fbcdcf;
+    }
+    .tabbable-line.tabs-below > .nav-tabs > li.active {
+      margin-bottom: -2px;
+      border-bottom: 0;
+      border-top: 4px solid #f3565d;
+    }
+    .tabbable-line.tabs-below > .tab-content {
+      margin-top: -10px;
+      border-top: 0;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 15px;
+    }
+
   </style>
   
   <body>
 
     <nav class="navbar sticky-top" id="navbar"> 
-      <div>
-        <ul id="nav navbar-nav navbar-left">
-          <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
-          <li><a class="nav-link" href="#Projects"> Projects </a></li>
-          <li><a class="nav-link" href="#Skills"> Skills </a></li>
-          <li><a class="nav-link" href="#Awards"> Awards </a></li>
-          <li><a class="nav-link" href="#Contact"> Contact </a></li>
-        </ul>
-        <div class="navbar-header">
+      <div class="navbar-header">
+        <div class="tabbable-panel">
+          <div class="tabbable-line">
+            <ul id="nav nav-tabs">
+              <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
+              <li><a class="nav-link" href="#Projects"> Projects </a></li>
+              <li><a class="nav-link" href="#Skills"> Skills </a></li>
+              <li><a class="nav-link" href="#Awards"> Awards </a></li>
+              <li><a class="nav-link" href="#Contact"> Contact </a></li>
+            </ul>
           <a class="navbar-brand" href="index.html" id="logo">
             <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
           </a> 
-        </div>
       </div>
     </nav>
 
