--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
         <div class="tabbable-panel">
           <div class="tabbable-line">
             <ul id="nav nav-tabs">
-              <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
-              <li><a class="nav-link" href="#Projects"> Projects </a></li>
-              <li><a class="nav-link" href="#Skills"> Skills </a></li>
-              <li><a class="nav-link" href="#Awards"> Awards </a></li>
-              <li><a class="nav-link" href="#Contact"> Contact </a></li>
+              <li><a data-toggle="tab" href="#AboutMe"> About Me </a></li>
+              <li><a data-toggle="tab" href="#Projects"> Projects </a></li>
+              <li><a data-toggle="tab" href="#Skills"> Skills </a></li>
+              <li><a data-toggle="tab" href="#Awards"> Awards </a></li>
+              <li><a data-toggle="tab" href="#Contact"> Contact </a></li>
             </ul>
           <a class="navbar-brand" href="index.html" id="logo">
             <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
