--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
               <li><a data-toggle="tab" href="#Awards"> Awards </a></li>
               <li><a data-toggle="tab" href="#Contact"> Contact </a></li>
             </ul>
+          </div>
+        </div>
           <a class="navbar-brand" href="index.html" id="logo">
             <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
           </a> 
