--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <div class="navbar-header">
         <div class="tabbable-panel">
           <div class="tabbable-line">
-            <ul id="nav nav-tabs">
+            <ul class="nav nav-tabs">
               <li><a data-toggle="tab" href="#AboutMe"> About Me </a></li>
               <li><a data-toggle="tab" href="#Projects"> Projects </a></li>
               <li><a data-toggle="tab" href="#Skills"> Skills </a></li>
