--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
       padding-bottom: 15px;
     }
 
-    .nav-tabs {
+    .nav .nav-tabs {
       text-decoration: none;
     }
 
-    .fa {
+    .fa .fa-github .fa-lg {
       text-decoration: none;
     }
 
