--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <body>
 
     <nav class="navbar sticky-top" id="navbar"> 
-      <div class="navbar-header">
+      <div class="navbar-header row">
         <div class="tabbable-panel">
           <div class="tabbable-line">
             <ul class="nav nav-tabs">
@@ -214,45 +214,6 @@
 
 
     <section id="Home">
-      <nav class="navbar sticky-top" id="navbar"> 
-        <div class="navbar-header">
-          <div class="tabbable-panel">
-            <div class="tabbable-line">
-              <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
-              </ul>
-            </div>
-          </div>
-            <a class="navbar-brand" href="index.html" id="logo">
-              <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-            </a> 
-        </div>
-      </nav>
-      <div class="container">
-        <nav class="navbar sticky-top" id="navbar"> 
-          <div class="navbar-header">
-            <div class="tabbable-panel">
-              <div class="tabbable-line">
-                <ul class="nav nav-tabs">
-                  <li><a data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
-                  <li class="active"><a data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
-                  <li><a data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
-                  <li><a data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
-                  <li><a data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
-                  <li><a data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
-                </ul>
-              </div>
-            </div>
-              <a class="navbar-brand" href="index.html" id="logo">
-                <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-              </a> 
-          </div>
-        </nav>
         <div class="col-md-12" style="text-align: center;">
           <p2 id="intro1"> Hi! My name is <p1 id="intro2"> <b> Jack Douglas</b></p1>.</p2>
           <br>
