--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     }
     .navbar-brand {
       float:none;
+      text-align: center;
     }
 
     #navbar { 
@@ -278,7 +279,7 @@
                   <div class="col-md-4">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io"> 
-                        <i class="fa fa-github fa-lg" style="color: #3F3E3E; text-decoration: none"></i>
+                        <i class="fa fa-github fa-lg" style="color: #3F3E3E;" style="text-decoration: none"></i>
                       </a>
                       with
                       <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
