--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
     }
     .navbar-brand {
       float:none;
-      text-align: center;
     }
 
     #navbar { 
@@ -188,6 +187,10 @@
       padding-bottom: 15px;
     }
 
+    #logo {
+      float: center;
+    }
+
   </style>
   
   <body>
@@ -206,7 +209,7 @@
             </ul>
           </div>
         </div>
-          <a class="navbar-brand" href="index.html" id="logo">
+          <a class="navbar-brand col-md-12" href="index.html" id="logo">
             <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
           </a> 
       </div>
