--- a/index.html
+++ b/index.html
@@ -191,11 +191,27 @@
       float: center;
     }
 
-    #pagesL {
+    #tabHome {
       float: left;
     }
 
-    #pagesR {
+    #tabAbout {
+      float: center;
+    }
+
+    #tabProjects {
+      float: right;
+    }
+
+    #tabSkills {
+      float: left;
+    }
+
+    #tabAwards {
+      float: center;
+    }
+
+    #tabContact {
       float: right;
     }
 
@@ -208,10 +224,10 @@
         <div class="col-md-4">
           <div class="tabbable-panel">
             <div class="tabbable-line">
-              <ul id="pagesL" class="nav nav-tabs">
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
+              <ul class="nav nav-tabs">
+                <li id="tabHome"><a data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
+                <li id="tabAbout"><a data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
+                <li id="tabProjects"><a data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
               </ul>
             </div>
           </div>
@@ -224,10 +240,10 @@
         <div class="col-md-4">
           <div class="tabbable-panel">
             <div class="tabbable-line">
-              <ul id="pageR" class="nav nav-tabs">
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
-                <li><a data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
+              <ul class="nav nav-tabs">
+                <li id="tabSkills"><a data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
+                <li id="tabAwards"><a data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
+                <li id="tabContact"><a data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
               </ul>
             </div>
           </div>
