--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
           <div class="tabbable-panel">
             <div class="tabbable-line">
               <ul class="nav nav-tabs">
-                <li id="tabHome"><a data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
-                <li id="tabAbout"><a data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
-                <li id="tabProjects"><a data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
+                <li><a id="tabHome" data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
+                <li><a id="tabAbout" data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
+                <li><a id="tabProjects" data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
               </ul>
             </div>
           </div>
@@ -241,9 +241,9 @@
           <div class="tabbable-panel">
             <div class="tabbable-line">
               <ul class="nav nav-tabs">
-                <li id="tabSkills"><a data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
-                <li id="tabAwards"><a data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
-                <li id="tabContact"><a data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
+                <li><a id="tabSkills" data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
+                <li><a id="tabAwards" data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
+                <li><a id="tabContact" data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
               </ul>
             </div>
           </div>
