--- a/index.html
+++ b/index.html
@@ -192,27 +192,27 @@
     }
 
     #tabHome {
-      float: left;
+      text-align: left;
     }
 
     #tabAbout {
-      float: center;
+      text-align: center;
     }
 
     #tabProjects {
-      float: right;
+      text-align: right;
     }
 
     #tabSkills {
-      float: left;
+      text-align: left;
     }
 
     #tabAwards {
-      float: center;
+      text-align: center;
     }
 
     #tabContact {
-      float: right;
+      text-align: right;
     }
 
   </style>
