--- a/index.html
+++ b/index.html
@@ -60,16 +60,13 @@
     #intro1 {
       font-size: 20px;
       float: center;
-    }
-
-    #intro2 {
-      font-size: 30px;
-      float: center;
+      text-transform: uppercase;
     }
 
     #intro3 {
       font-size: 20px;
       float: center;
+      text-transform: uppercase;
     }
 
     #footer1 {
@@ -187,6 +184,8 @@
       padding-bottom: 15px;
     }
 
+    /** Navbar specs */
+
     #logo {
       float: center;
     }
@@ -201,6 +200,58 @@
 
     .text-right {
       text-align: right;
+    }
+
+    /** Section details */
+
+    .section-title {
+      max-width: 800px;
+      margin: 80px auto;
+      padding: 15px;
+      text-align: center; 
+    }
+    .section-title h2 {
+      font-size: 24px;
+      text-transform: uppercase;
+      color: #2ca5b9; 
+    }
+    .section-title .divider {
+      position: relative;
+      border-bottom: 1px solid #f0f0f0;
+      margin-bottom: 30px;
+      margin-top: 30px; 
+    }
+    .section-title .divider:before {
+      position: absolute;
+      content: '';
+      width: 30px;
+      height: 30px;
+      border: 1px solid #f0f0f0;
+      left: 50%;
+      margin-left: -15px;
+      top: 50%;
+      background: #fff;
+      margin-top: -15px;
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg); 
+    }
+    .section-title .divider:after {
+      position: absolute;
+      content: '';
+      width: 20px;
+      height: 20px;
+      border: 1px solid #2ca5b9;
+      left: 50%;
+      margin-left: -10px;
+      top: 50%;
+      background: #2ca5b9;
+      margin-top: -10px;
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg); 
     }
 
   </style>
@@ -243,7 +294,7 @@
 
     <section id="Home">
         <div class="col-md-12" style="text-align: center;">
-          <p2 id="intro1"> Hi! My name is <p1 id="intro2"> <b> Jack Douglas</b></p1>.</p2>
+          <p2 id="intro1"> Hi! My name is <h1 style="text-transform: uppercase;"> <b> Jack Douglas</b></h1>.</p2>
           <br>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
         </div>
@@ -254,10 +305,11 @@
 
     <section id="AboutMe">
       <div class="container">
-        <h2 style="text-align: center;">
-          <span class="main-head"> About Me </span>
-          <span class="sub-head"> Testing tralalala </span>
-        </h2>
+        <div class="section-title">
+          <h2> About Me </h2>
+          <div class="divider"> </div>
+          <p> Tralalala </p>
+        </div>
       </div>
     </section>
 
