supa hot content

--- a/index.html
+++ b/index.html
@@ -60,13 +60,11 @@
     #intro1 {
       font-size: 20px;
       float: center;
-      text-transform: uppercase;
     }
 
     #intro3 {
       font-size: 20px;
       float: center;
-      text-transform: uppercase;
     }
 
     #footer1 {
@@ -317,7 +315,11 @@
 
     <section id="Projects">
       <div class="container">
-        <p> This is the projects section. </p>
+        <div class="section-title">
+          <h2> Projects </h2>
+          <div class="divider"> </div>
+          <p> Tralalala </p>
+        </div>
       </div>
     </section>
 
@@ -325,7 +327,11 @@
 
     <section id="Skills">
       <div class="container">
-        <p> This is the skills section. </p>
+        <div class="section-title">
+          <h2> Skills </h2>
+          <div class="divider"> </div>
+          <p> Tralalala </p>
+        </div>
       </div>
     </section>
 
@@ -333,7 +339,11 @@
 
     <section id="Awards">
       <div class="container">
-        <p> This is the awards section. </p>
+        <div class="section-title">
+          <h2> Awards </h2>
+          <div class="divider"> </div>
+          <p> Tralalala </p>
+        </div>
       </div>
     </section>
 
@@ -341,7 +351,11 @@
 
     <section id="Contact">
       <div class="container">
-        <p> This is the contact section. </p>
+        <div class="section-title">
+          <h2> Contact </h2>
+          <div class="divider"> </div>
+          <p> Tralalala </p>
+        </div>
       </div>
     </section>
 
