--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
 
   	#AboutMe {
   		background-color: #EAF9FA;
+      padding-top: 20px;
+      padding-bottom: 7px;
   	}
 
     #Skills {
       background-color: #EAF9FA;
+      padding-top: 20px;
+      padding-bottom: 7px;
     }
 
     #Contact {
       background-color: #EAF9FA;
+      padding-top: 20px;
+      padding-bottom: 7px;
     }
 
     #navbar {
@@ -192,10 +198,15 @@
       padding: 15px;
       text-align: center; 
     }
-    .section-title h2 {
+    .section-title1 h2 {
       font-size: 24px;
       text-transform: uppercase;
       color: #2ca5b9; 
+    }
+    .section-title2 h2 {
+      font-size: 24px;
+      text-transform: uppercase;
+      color: #FFFFFF; 
     }
     .section-title .divider {
       position: relative;
@@ -287,7 +298,7 @@
 
     <section id="AboutMe">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title2">
           <h2> About Me </h2>
           <div class="divider"> </div>
           <p> Tralalala </p>
@@ -299,7 +310,7 @@
 
     <section id="Projects">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title1">
           <h2> Projects </h2>
           <div class="divider"> </div>
           <p> Tralalala </p>
@@ -311,7 +322,7 @@
 
     <section id="Skills">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title2">
           <h2> Skills </h2>
           <div class="divider"> </div>
           <p> Tralalala </p>
@@ -323,7 +334,7 @@
 
     <section id="Awards">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title1">
           <h2> Awards </h2>
           <div class="divider"> </div>
           <p> Tralalala </p>
@@ -334,7 +345,7 @@
 
 
     <section id="Contact">
-      <div class="container">
+      <div class="container2">
         <div class="section-title">
           <h2> Contact </h2>
           <div class="divider"> </div>
