--- a/index.html
+++ b/index.html
@@ -192,7 +192,13 @@
 
     /** Section details */
 
-    .section-title {
+    .section-title1 {
+      max-width: 800px;
+      margin: 80px auto;
+      padding: 15px;
+      text-align: center; 
+    }
+    .section-title2 {
       max-width: 800px;
       margin: 80px auto;
       padding: 15px;
@@ -206,15 +212,15 @@
     .section-title2 h2 {
       font-size: 24px;
       text-transform: uppercase;
-      color: #FFFFFF; 
+      color: #000000; 
     }
-    .section-title .divider {
+    .section-title1 .divider {
       position: relative;
       border-bottom: 1px solid #f0f0f0;
       margin-bottom: 30px;
       margin-top: 30px; 
     }
-    .section-title .divider:before {
+    .section-title1 .divider:before {
       position: absolute;
       content: '';
       width: 30px;
@@ -230,7 +236,45 @@
       -ms-transform: rotate(45deg);
       transform: rotate(45deg); 
     }
-    .section-title .divider:after {
+    .section-title1 .divider:after {
+      position: absolute;
+      content: '';
+      width: 20px;
+      height: 20px;
+      border: 1px solid #2ca5b9;
+      left: 50%;
+      margin-left: -10px;
+      top: 50%;
+      background: #2ca5b9;
+      margin-top: -10px;
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg); 
+    }
+        .section-title2 .divider {
+      position: relative;
+      border-bottom: 1px solid #000000;
+      margin-bottom: 30px;
+      margin-top: 30px; 
+    }
+    .section-title2 .divider:before {
+      position: absolute;
+      content: '';
+      width: 30px;
+      height: 30px;
+      border: 1px solid #000000;
+      left: 50%;
+      margin-left: -15px;
+      top: 50%;
+      background: #fff;
+      margin-top: -15px;
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg); 
+    }
+    .section-title2 .divider:after {
       position: absolute;
       content: '';
       width: 20px;
@@ -345,7 +389,7 @@
 
 
     <section id="Contact">
-      <div class="container2">
+      <div class="container">
         <div class="section-title">
           <h2> Contact </h2>
           <div class="divider"> </div>
