--- a/index.html
+++ b/index.html
@@ -205,20 +205,20 @@
       text-align: center; 
     }
     .section-title1 h2 {
-      font-size: 24px;
+      font-size: 30px;
       text-transform: uppercase;
       color: #2ca5b9; 
     }
     .section-title2 h2 {
-      font-size: 24px;
+      font-size: 30px;
       text-transform: uppercase;
       color: #000000; 
     }
     .section-title1 .divider {
       position: relative;
       border-bottom: 1px solid #f0f0f0;
-      margin-bottom: 30px;
-      margin-top: 30px; 
+      margin-bottom: 10px;
+      margin-top: 10px; 
     }
     .section-title1 .divider:before {
       position: absolute;
@@ -255,8 +255,8 @@
         .section-title2 .divider {
       position: relative;
       border-bottom: 1px solid #000000;
-      margin-bottom: 30px;
-      margin-top: 30px; 
+      margin-bottom: 10px;
+      margin-top: 10px; 
     }
     .section-title2 .divider:before {
       position: absolute;
@@ -331,7 +331,7 @@
 
     <section id="Home">
         <div class="col-md-12" style="text-align: center;">
-          <p2 id="intro1"> Hi! My name is <h1 style="text-transform: uppercase;"> <b> Jack Douglas</b></h1>.</p2>
+          <p2 id="intro1"> Hi! My name is <h1> <b> Jack Douglas</b></h1>.</p2>
           <br>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
         </div>
@@ -390,7 +390,7 @@
 
     <section id="Contact">
       <div class="container">
-        <div class="section-title">
+        <div class="section-title2">
           <h2> Contact </h2>
           <div class="divider"> </div>
           <p> Tralalala </p>
