--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     .section-title1 .divider {
       position: relative;
       border-bottom: 1px solid #f0f0f0;
-      margin-bottom: 10px;
-      margin-top: 10px; 
+      margin-bottom: 30px;
+      margin-top: 30px; 
     }
     .section-title1 .divider:before {
       position: absolute;
@@ -255,8 +255,8 @@
         .section-title2 .divider {
       position: relative;
       border-bottom: 1px solid #000000;
-      margin-bottom: 10px;
-      margin-top: 10px; 
+      margin-bottom: 30px;
+      margin-top: 30px; 
     }
     .section-title2 .divider:before {
       position: absolute;
@@ -331,7 +331,7 @@
 
     <section id="Home">
         <div class="col-md-12" style="text-align: center;">
-          <p2 id="intro1"> Hi! My name is <h1> <b> Jack Douglas</b></h1>.</p2>
+          <p2 id="intro1"> Hi! My name is <p style="font-size: 32px;"> <b> Jack Douglas</b></p>.</p2>
           <br>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
         </div>
