--- a/index.html
+++ b/index.html
@@ -49,12 +49,10 @@
 
     #intro1 {
       font-size: 20px;
-      float: center;
     }
 
     #intro3 {
       font-size: 20px;
-      float: center;
     }
 
     #footer1 {
@@ -216,7 +214,7 @@
     }
     .section-title1 .divider {
       position: relative;
-      border-bottom: 1px solid #f0f0f0;
+      border-bottom: 1px solid #000000;
       margin-bottom: 30px;
       margin-top: 30px; 
     }
@@ -225,7 +223,7 @@
       content: '';
       width: 30px;
       height: 30px;
-      border: 1px solid #f0f0f0;
+      border: 1px solid #000000;
       left: 50%;
       margin-left: -15px;
       top: 50%;
@@ -331,7 +329,7 @@
 
     <section id="Home">
         <div class="col-md-12" style="text-align: center;">
-          <p2 id="intro1"> Hi! My name is <p style="font-size: 32px;"> <b> Jack Douglas</b></p>.</p2>
+          <p2 id="intro1"> Hi! My name is <p style="font-size: 48px;"> <b> Jack Douglas</b>.</p></p2>
           <br>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
         </div>
