--- a/index.html
+++ b/index.html
@@ -330,7 +330,6 @@
     <section id="Home">
         <div class="col-md-12" style="text-align: center;">
           <p2 id="intro1"> Hi! My name is <p style="font-size: 48px;"> <b> Jack Douglas</b>.</p></p2>
-          <br>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
         </div>
       </div>
@@ -412,7 +411,7 @@
                   <div class="col-md-4">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io"> 
-                        <i class="fa fa-github fa-lg" style="color: #3F3E3E; text-decoration: none"></i>
+                        <i class="fa fa-github fa-lg" style="color: #3F3E3E; text-decoration: none;"></i>
                       </a>
                       with
                       <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
