--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     #Home {
       padding-top: 20px;
       padding-bottom: 20px;
+      background-image: url("images/IveyPhoto.jpg");
     }
 
   	#AboutMe {
