--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     #Home {
       padding-top: 20px;
       padding-bottom: 20px;
+      background-image: url("homeImg");
     }
 
-    #homeImg {
+    #Home.homeImg {
       width: 100%;
       height: 130%;
       opacity: 0.5;
@@ -335,7 +336,7 @@
 
     <section id="Home">
         <div class="col-md-12" style="text-align: center;">
-          <img id="homeImg" style="background-image: url('images/IveyPhoto.jpg');"> </img>
+          <img src="images/IveyPhoto.jpg" id="homeImg"> </img>
           <p2 id="intro1"> Hi! My name is <p style="font-size: 48px;"> <b> Jack Douglas</b>.</p></p2>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
         </div>
