--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     #Home {
       padding-top: 20px;
       padding-bottom: 20px;
-      background-image: url("homeImg");
     }
 
     #Home.homeImg {
+      background-image: url("images/IveyPhoto.jpg");
       width: 100%;
       height: 130%;
       opacity: 0.5;
