--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
     #Home {
       padding-top: 20px;
       padding-bottom: 20px;
-      background-image: url("images/IveyPhoto.jpg");
-      width: 100%;
-      height: 130%;
-      opacity: 0.5;
     }
 
-    #Home.homeImg {
+    .cover-photo {
       background-image: url("images/IveyPhoto.jpg");
       width: 100%;
-      height: 130%;
-      opacity: 0.5;
+      height: 100%;
+      top: 0;
+      left: 0;
+      position: absolute;
     }
 
   	#AboutMe {
@@ -339,8 +337,7 @@
 
 
     <section id="Home">
-        <div class="col-md-12" style="text-align: center;">
-          <img src="images/IveyPhoto.jpg" id="homeImg"> </img>
+        <div class="col-md-12 cover-photo" style="text-align: center;">
           <p2 id="intro1"> Hi! My name is <p style="font-size: 48px;"> <b> Jack Douglas</b>.</p></p2>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
         </div>
