--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
 
     .cover-photo {
       background-image: url("images/IveyPhoto.jpg");
+      background: rgba(51,,51,51,0.84);
       width: 100%;
       height: 100%;
       top: 0;
       left: 0;
       position: absolute;
+
     }
 
   	#AboutMe {
@@ -337,9 +339,11 @@
 
 
     <section id="Home">
-        <div class="col-md-12 cover-photo" style="text-align: center;">
+        <div class="col-md-12" style="text-align: center;">
           <p2 id="intro1"> Hi! My name is <p style="font-size: 48px;"> <b> Jack Douglas</b>.</p></p2>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
+          <div class="cover-photo">
+          </div>
         </div>
       </div>
     </section>
