--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     .cover-photo {
       background-image: url("images/IveyPhoto.jpg");
-      background: rgba(51,,51,51,0.84);
+      background: rgba(51,,51,51,0.5) !important;
       width: 100%;
       height: 100%;
       top: 0;
@@ -309,7 +309,7 @@
         <div class="col-md-4">
           <div class="tabbable-panel">
             <div class="tabbable-line">
-              <ul class="nav nav-tabs">
+              <ul class="nav nav-tabs col-md-4">
                 <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
                 <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
                 <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
@@ -325,7 +325,7 @@
         <div class="col-md-4">
           <div class="tabbable-panel">
             <div class="tabbable-line">
-              <ul class="nav nav-tabs">
+              <ul class="nav nav-tabs col-md-4">
                 <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
                 <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
                 <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
