--- a/index.html
+++ b/index.html
@@ -355,7 +355,12 @@
         <div class="section-title2">
           <h2> About Me </h2>
           <div class="divider"> </div>
-          <p> Tralalala </p>
+          <div class="col-md-6">
+
+          </div>
+          <div class="col-md-6">
+              <img src="images/CanadaWonderland.jpg">
+          </div>
         </div>
       </div>
     </section>
