--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <link rel="icon" href="images/JD.jpg">
 
+    <title> Jack Douglas </title>
+
   </head>
 
   <style>
@@ -356,10 +358,10 @@
           <h2> About Me </h2>
           <div class="divider"> </div>
           <div class="col-md-6">
-
+            <p> I am a 16-year-old high school student born and raised in Toronto, Canada. <p>
           </div>
           <div class="col-md-6">
-              <img src="images/CanadaWonderland.jpg">
+              <img src="images/CanadaWonderland.jpg" style="float: center;">
           </div>
         </div>
       </div>
