--- a/index.html
+++ b/index.html
@@ -357,11 +357,13 @@
         <div class="section-title2">
           <h2> About Me </h2>
           <div class="divider"> </div>
-          <div class="col-md-6">
-            <p> I am a 16-year-old high school student born and raised in Toronto, Canada. <p>
-          </div>
-          <div class="col-md-6">
-              <img src="images/CanadaWonderland.jpg" style="float: center;">
+          <div class="row">  
+            <div class="col-md-6">
+              I am a 16-year-old high school student born and raised in Toronto, Canada.
+            </div>
+            <div class="col-md-6">
+                <img src="images/CanadaWonderland.jpg" style="float: center;">
+            </div>
           </div>
         </div>
       </div>
