--- a/index.html
+++ b/index.html
@@ -358,10 +358,12 @@
           <h2> About Me </h2>
           <div class="divider"> </div>
           <div class="row">  
-            <div class="col-md-6">
-              I am a 16-year-old high school student born and raised in Toronto, Canada.
+            <div class="col-md-12">
+              <p style="font-size: 24px;"> <b> Hey! </b> </p>
+              <br>
+              <p style="text-align: left; font-size: 20px;"> I am a 16-year-old high school student born and raised in Toronto, Canada. </p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <img src="images/CanadaWonderland.jpg" style="float: center;">
             </div>
           </div>
