--- a/index.html
+++ b/index.html
@@ -358,10 +358,9 @@
           <h2> About Me </h2>
           <div class="divider"> </div>
           <div class="row">  
-            <div class="col-md-6" style="float: left;">
+            <div class="col-md-6" style="text-align: left;">
               <p style="font-size: 24px;"> <b> Hey! </b> </p>
-              <br>
-              <p style="font-size: 20px;"> I am a 16-year-old high school student born and raised in Toronto, Canada. </p>
+              <p style="font-size: 20px;"> I am a 16-year-old high school student born and raised in Toronto, Canada. I have attended Upper Canada College since grade 9. </p>
             </div>
             <div class="col-md-6">
                 <img src="images/CanadaWonderland.jpg" style="float: center;">
