--- a/index.html
+++ b/index.html
@@ -309,15 +309,13 @@
     <nav class="navbar sticky-top" id="navbar"> 
       <div class="navbar-header row">
         <div class="col-md-4">
-          <div class="tabbable-panel">
             <div class="tabbable-line">
-              <ul class="nav nav-tabs col-md-4">
+              <ul class="nav nav-tabs">
                 <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Home"> Home </a></li>
                 <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#AboutMe"> About Me </a></li>
                 <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Projects"> Projects </a></li>
               </ul>
             </div>
-          </div>
         </div>
         <div class="col-md-4">  
           <a class="navbar-brand" href="index.html" id="logo">
@@ -325,15 +323,13 @@
           </a>
         </div>
         <div class="col-md-4">
-          <div class="tabbable-panel">
             <div class="tabbable-line">
-              <ul class="nav nav-tabs col-md-4">
+              <ul class="nav nav-tabs">
                 <li><a class="text-left" data-toggle="tab" style="text-decoration: none" href="#Skills"> Skills </a></li>
                 <li><a class="text-center" data-toggle="tab" style="text-decoration: none" href="#Awards"> Awards </a></li>
                 <li><a class="text-right" data-toggle="tab" style="text-decoration: none" href="#Contact"> Contact </a></li>
               </ul>
             </div>
-          </div>
         </div>
       </div>
     </nav>
