--- a/index.html
+++ b/index.html
@@ -302,6 +302,14 @@
       transform: rotate(45deg); 
     }
 
+    .githubImg {
+      color: #3F3E3E
+    }
+
+    .devpost {
+      colour: #000000;
+    }
+
   </style>
   
   <body>
@@ -409,7 +417,22 @@
         <div class="section-title2">
           <h2> Contact </h2>
           <div class="divider"> </div>
-          <p> Tralalala </p>
+          <p> You've reached the end of my website. Awesome! If you'd like to contact me, you can reach me at the email seen below. You can send me a message on this website!</p>
+          <br>
+          <p> <i class="fa fa-envelope-o"> </i> jackdouglas145@gmail.com </p>
+          <br>
+          <p> Check out some other platforms I'm on! </p>
+          <br>
+          <div class="row">
+            <a href="https://www.linkedin.com/in/jack-douglas-910896150/">
+              <i class="fa fa-linkedin-square" style="text-decoration: none"> </i>
+            </a>
+            <a href="https://github.com/j-douglas/">
+              <i class="fa fa-github" style="text-decoration: none"> </i>
+            </a>
+            <a href="https://devpost.com/J-Douglas?ref_content=user-portfoli&ref_feature=portfolio&ref_medium=global-nav">
+              <img id="devpost" src="https://devpost-challengepost.netdna-ssl.com/assets/reimagine2/devpost-icon-900856edde1e4a510a65f29a1bde7a2b.svg" style="text-decoration: none"> </i>
+            </a>
         </div>
       </div>
     </section>
@@ -430,7 +453,7 @@
                   <div class="col-md-4">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io"> 
-                        <i class="fa fa-github fa-lg" style="color: #3F3E3E; text-decoration: none;"></i>
+                        <i id="githubImg"class="fa fa-github fa-lg" style="text-decoration: none"></i>
                       </a>
                       with
                       <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
