--- a/index.html
+++ b/index.html
@@ -303,11 +303,11 @@
     }
 
     .githubImg {
-      color: #3F3E3E
+      color: #3F3E3E;
     }
 
     .devpost {
-      colour: #000000;
+      color: #000000;
     }
 
   </style>
@@ -423,12 +423,12 @@
           <br>
           <p> Check out some other platforms I'm on! </p>
           <br>
-          <div class="row">
+          <div class="row" style="float: center;">
             <a href="https://www.linkedin.com/in/jack-douglas-910896150/">
-              <i class="fa fa-linkedin-square" style="text-decoration: none"> </i>
+              <i class="fa fa-linkedin-square fa-4x" style="text-decoration: none"> </i>
             </a>
             <a href="https://github.com/j-douglas/">
-              <i class="fa fa-github" style="text-decoration: none"> </i>
+              <i class="fa fa-github fa-4x" style="text-decoration: none"> </i>
             </a>
             <a href="https://devpost.com/J-Douglas?ref_content=user-portfoli&ref_feature=portfolio&ref_medium=global-nav">
               <img id="devpost" src="https://devpost-challengepost.netdna-ssl.com/assets/reimagine2/devpost-icon-900856edde1e4a510a65f29a1bde7a2b.svg" style="text-decoration: none"> </i>
@@ -452,8 +452,8 @@
                   </div>
                   <div class="col-md-4">
                     <h3 id="footer3"> Made on
-                      <a href="https://github.com/j-douglas/j-douglas.github.io"> 
-                        <i id="githubImg"class="fa fa-github fa-lg" style="text-decoration: none"></i>
+                      <a href="https://github.com/j-douglas/j-douglas.github.io" style="text-decoration: none"> 
+                        <i id="githubImg"class="fa fa-github fa-lg" ></i>
                       </a>
                       with
                       <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
